--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 on:
   pull_request:
     branches:
-    - projectUsingContainers, main
+    - main
 jobs:
   testes-unitarios:
     runs-on: ubuntu-latest
