Add test execution step to GitHub Actions workflow

--- a/.github/workflows/testes.yml
+++ b/.github/workflows/testes.yml
@@ -49,4 +49,11 @@ jobs:
           PGPASSWORD=postgres psql -h localhost -U postgres -d shortener -c "\dt"
           PGPASSWORD=postgres psql -h localhost -U postgres -d shortener -c "\d urls"
 
-      - name
+      - name: Rodar Testes
+        env:
+          PGHOST: localhost
+          PGUSER: postgres
+          PGPASSWORD: postgres
+          PGDATABASE: shortener
+          PGPORT: 5432
+        run: npm test
