--- a/.github/workflows/testes.yml
+++ b/.github/workflows/testes.yml
@@ -13,12 +13,12 @@ jobs:
     services:
       postgres:
         image: postgres:15
-        ports:
-          - 5432:5432
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
           POSTGRES_DB: shortener
+        ports:
+          - "5432:5432"
         options: >-
           --health-cmd "pg_isready -U postgres"
           --health-interval 5s
@@ -47,14 +47,9 @@ jobs:
 
       - name: Criar tabela URLs
         run: |
-          PGPASSWORD=postgres psql -h 127.0.0.1 -U postgres -d shortener -c "
-            CREATE TABLE IF NOT EXISTS urls (
-              code TEXT PRIMARY KEY,
-              url TEXT NOT NULL
-            );
-          "
+          PGPASSWORD=postgres psql -h 127.0.0.1 -U postgres -d shortener -c "CREATE TABLE IF NOT EXISTS urls (code TEXT PRIMARY KEY, url TEXT NOT NULL);"
 
-      - name: Debug: verificar jest
+      - name: Debug - verificar jest
         run: ls -la node_modules/.bin
 
       - name: Rodar Testes
@@ -64,5 +59,5 @@ jobs:
           PGPASSWORD: postgres
           PGDATABASE: shortener
           PGPORT: 5432
-          PATH: ./node_modules/.bin:$PATH
+          PATH: "./node_modules/.bin:${PATH}"
         run: npm test
