--- a/.github/workflows/testes.yml
+++ b/.github/workflows/testes.yml
@@ -5,6 +5,7 @@ on:
     branches: ["main"]
   pull_request:
     branches: ["main"]
+  workflow_dispatch:    # <---- permite executar manualmente
 
 jobs:
   test:
