--- a/.github/workflows/testes.yml
+++ b/.github/workflows/testes.yml
@@ -35,7 +35,7 @@ jobs:
       - name: setup node
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: "20"
 
       - name: install deps
         run: npm ci
