ci: add tests workflow

--- a/.github/workflows/testes.yml
+++ b/.github/workflows/testes.yml
@@ -1,10 +1,10 @@
-name: Testes
+name: tests-ci
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ main ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
@@ -14,51 +14,56 @@ jobs:
     services:
       postgres:
         image: postgres:15
-        ports:
-          - 5432:5432
         env:
           POSTGRES_DB: shortener
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
+        ports:
+          - 5432:5432
 
     steps:
-      - name: Checkout codigo
+      - name: checkout
         uses: actions/checkout@v4
 
-      - name: Instalar NodeJS
+      - name: setup node
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: '20'
 
-      - name: Instalar dependencias
-        run: npm install
+      - name: install deps
+        run: npm ci
 
-      - name: Aguardar Postgres subir
+      - name: wait postgres
         run: |
           for i in {1..20}; do
-            if pg_isready -h localhost -p 5432 -U postgres; then
-              echo "Postgres pronto!"
-              exit 0
-            fi
-            echo "Aguardando Postgres..."
+            pg_isready -h 127.0.0.1 -p 5432 && break
+            echo "waiting postgres..."
             sleep 2
           done
-          echo "Postgres nao subiu a tempo"
-          exit 1
 
-      - name: Criar tabela URLs
+      - name: create table
         run: |
-          PGPASSWORD=postgres psql -h localhost -U postgres -d shortener \
-            -c "CREATE TABLE IF NOT EXISTS urls (code TEXT PRIMARY KEY, url TEXT NOT NULL);"
+          PGPASSWORD=postgres psql -h 127.0.0.1 -U postgres -d shortener -c "CREATE TABLE IF NOT EXISTS urls (code TEXT PRIMARY KEY, url TEXT NOT NULL);"
 
-      - name: Debug verificar jest
-        run: ls -la node_modules/.bin
+      - name: debug jest
+        run: ls -la node_modules/.bin || true
 
-      - name: Rodar testes
+      - name: run unit tests
         env:
-          PGHOST: localhost
+          PGHOST: 127.0.0.1
           PGUSER: postgres
           PGPASSWORD: postgres
           PGDATABASE: shortener
           PGPORT: 5432
-        run: npm test
+          BASE_URL: "http://localhost:3000"
+        run: npm run test:unit
+
+      - name: run integration tests
+        env:
+          PGHOST: 127.0.0.1
+          PGUSER: postgres
+          PGPASSWORD: postgres
+          PGDATABASE: shortener
+          PGPORT: 5432
+          BASE_URL: "http://localhost:3000"
+        run: npm run test:integration
